Added readme links to most module files

--- a/modules/5507-01-hw.md
+++ b/modules/5507-01-hw.md
@@ -36,6 +36,10 @@ Not available yet.
 
 This page is available both on Canvas and [my github site][git0]. If you find a discrepancy let me know. The Canvas site should always take precedence.
 
+Here are links to [other important files][mygit] on my github site.
+
+[mygit]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
+
 [can1]: https://umsystem.instructure.com/courses/14949/assignments/743939
 [can2]: https://umsystem.instructure.com/courses/14949/discussion_topics/629703
 
