--- a/modules/5507-02-videos.md
+++ b/modules/5507-02-videos.md
@@ -45,6 +45,10 @@ knit: (function(inputFile, encoding) {
 + Video available in [Panopto format][m02v07]
 + Live demo. No slides or speaker notes
 
+Here are links to [other important files][readme] on my github site.
+
+[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
+
 [git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m02-5507-simon-slides-and-speaker-notes.pdf
 [git2]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m02-5507-simon-continuous-variables.sas
 
