--- a/modules/5507-03-videos.md
+++ b/modules/5507-03-videos.md
@@ -56,6 +56,10 @@ Note: This recording was from an earlier class, and refers to a homework assignm
 + Video available in [Panopto format][m03V99]
 + Live demo, slides are not available
 
+Here are links to [other important files][readme] on my github site.
+
+[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
+
 [git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m03-5507-simon-slides-and-speaker-notes.pdf
 
 [m03v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=f257dafa-1f47-40a4-a16a-ad5601435c74
