--- a/modules/5507-04-hw.md
+++ b/modules/5507-04-hw.md
@@ -42,6 +42,10 @@ I'd like some brief feedback to the videos you just watched. Keep it short. One 
 
 Graded: 3 points, one point deducted if submitted late.
 
+Here are links to [other important files][readme] on my github site.
+
+[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
+
 [git1]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/gardasil.csv
 
 [jse1]: http://jse.amstat.org/v19n1/gardasil.txt
