--- a/modules/5507-04-videos.md
+++ b/modules/5507-04-videos.md
@@ -40,7 +40,9 @@ knit: (function(inputFile, encoding) {
 + Video available in [Panopto format][m04v07]
 + See above for slides and speaker notes
 
+Here are links to [other important files][readme] on my github site.
 
+[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
 
 [git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m04-5507-simon-slides-and-speaker-notes.pdf
 [git2]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m04-5507-simon-categorical-variables.sas
