--- a/modules/5507-05-hw.md
+++ b/modules/5507-05-hw.md
@@ -41,6 +41,10 @@ Graded: 3 points, one point deducted if submitted late.
 
 Not yet available.
 
+Here are links to [other important files][readme] on my github site.
+
+[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
+
 [git1]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/housing.txt
 
 [sim1]: http://www.pmean.com/00files/housing.htm
