--- a/modules/5507-05-videos.md
+++ b/modules/5507-05-videos.md
@@ -35,7 +35,9 @@ knit: (function(inputFile, encoding) {
 + Video available in [Panopto format][m05v05]
 + See above for slides and speaker notes
 
+Here are links to [other important files][readme] on my github site.
 
+[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
 
 [git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m05-5507-slides-and-speaker-notes.pdf
 [git2]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m05-working-with-mix-of-variables.sas
