--- a/modules/5507-06-hw.md
+++ b/modules/5507-06-hw.md
@@ -8,3 +8,7 @@ knit: (function(inputFile, encoding) {
 ---
 
 ### No homework, no discussion, no quiz!!!
+
+Here are links to [other important files][readme] on my github site.
+
+[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
