--- a/modules/5507-06-videos.md
+++ b/modules/5507-06-videos.md
@@ -54,6 +54,10 @@ knit: (function(inputFile, encoding) {
 + Video available in [Panopto format][gcp9]
 + Slides not yet available.
 
+Here are links to [other important files][readme] on my github site.
+
+[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
+
 [gcp1]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=55cf0d09-3647-4135-8354-ab1901530b60
 [gcp2]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c4813050-49b8-4ff3-a649-ab190159a79c
 [gcp3]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=88c130ee-7317-490f-b6af-ab19015daa71
