--- a/src/create-module-handouts.Rmd
+++ b/src/create-module-handouts.Rmd
@@ -10,40 +10,38 @@ output: html_document
 
 ```{r}
 list.files(path="../results", pattern="\\.pdf") %>%
-  str_subset("m..-vi") -> pdf_v
+  str_subset("-slides-") -> pdf_v
 
 list.files(path="../results", pattern="\\.pptx") %>%
-  str_subset("m..-vi") -> ppt_v
+  str_subset("-slides-") -> ppt_v
 
 list.files(path="../src", pattern="\\.Rmd") %>%
-  str_subset("m..-vi") -> rmd_v
+  str_subset("-slides-") -> rmd_v
 
 list.files(path="../src", pattern="\\.sas") %>%
-  str_subset("m..-vi") -> sas_v
+  str_subset("-hw-", negate=TRUE) -> sas_v
 
 pdf_v %>% data.frame %>% set_names("pdf_v") %>% kable
 ppt_v %>% data.frame %>% set_names("ppt_v") %>% kable
 rmd_v %>% data.frame %>% set_names("rmd_v") %>% kable
-sas_v %>% data.frame %>% set_names("sas_h") %>% kable
+sas_v %>% data.frame %>% set_names("sas_v") %>% kable
 ```
 
 ```{r constants}
-modules <- zpad(1:8)
-prefix <- 'https://github.com/pmean/introduction-to-sql/blob/master/'
+modules <- zpad(1:5)
+prefix <- 'https://github.com/pmean/introduction-to-sas/blob/master/'
 ```
 
 ```{r write-module-resources}
 for (i in 1:length(modules)) {
   module <- modules[i]
   module_num <- paste0("Module", module)
-  pdf_v %>% str_subset(paste0("-m", module, "-")) -> pdf_v_subset
-  ppt_v %>% str_subset(paste0("-m", module, "-")) -> ppt_v_subset
-  rmd_v %>% str_subset(paste0("-m", module, "-")) -> rmd_v_subset
-  sas_v %>% str_subset(paste0("-m", module, "-")) -> sas_v_subset
-  filename <- str_replace("../modules/5508-xx-handouts.md", "xx", module)
+  pdf_v %>% str_subset(paste0("-", module, "-")) -> pdf_v_subset
+  ppt_v %>% str_subset(paste0("-", module, "-")) -> ppt_v_subset
+  rmd_v %>% str_subset(paste0("-", module, "-")) -> rmd_v_subset
+  sas_v %>% str_subset(paste0("-", module, "-")) -> sas_v_subset
+  filename <- str_replace("../modules/5507-xx-handouts.md", "xx", module)
 
-  vlist <- sort(c(rmd_v_subset, sas_v_subset))
-  
   # resources_intro
   readLines("create-module-handouts.txt") %>%
     paste0(collapse="\n")  %>%
@@ -62,8 +60,12 @@ for (i in 1:length(modules)) {
     paste0("\n", bullet(ppt_v_subset)) %>%
     
     paste0("\n\n") %>%
-    paste0("Here are R and SAS programs used in the videos.\n") %>%
-    paste0("\n", bullet(rmd_v_subset)) -> resources_slides_1
+    paste0("Here is the R program used two create the videos.\n") %>%
+    paste0("\n", bullet(rmd_v_subset)) %>%
+
+    paste0("\n\n") %>%
+    paste0("Here are the SAS programs used in the videos.\n") %>%
+    paste0("\n", bullet(sas_v_subset)) -> resources_slides_1
     
   paste0("\n\n<!---pdf_v--->") %>%
     paste0("\n", add_links(pdf_v_subset, "pdf", "results/")) %>%
@@ -71,8 +73,11 @@ for (i in 1:length(modules)) {
     paste0("\n\n<!---ppt_v--->") %>%
     paste0("\n", add_links(ppt_v_subset, "ppt", "results/")) %>%
     
-    paste0("\n\n<!---vlist--->") %>%
-    paste0("\n", add_links(vlist, "", "src/")) -> resources_slides_2
+    paste0("\n\n<!---rmd_v--->") %>%
+    paste0("\n", add_links(rmd_v_subset, "", "src/")) %>%
+
+    paste0("\n\n<!---sas_v--->") %>%
+    paste0("\n", add_links(sas_v_subset, "", "src/")) -> resources_slides_2
 
   # resources_conclusion
   paste0("This information is also available on ") %>%
@@ -87,7 +92,7 @@ for (i in 1:length(modules)) {
     paste0("\n\n<!---my git--->") %>%
     paste0("\n[thisf]: ") %>%
     paste0(prefix) %>%
-    paste0("modules/5508-") %>%
+    paste0("modules/5507-") %>%
     paste0(module) %>%
     paste0("-handouts.md") %>%
     
