Updated video files to umsystem

--- a/modules/5507-06-videos.md
+++ b/modules/5507-06-videos.md
@@ -58,12 +58,12 @@ Here are links to [other important files][readme] on my github site.
 
 [readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
 
-[gcp1]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=55cf0d09-3647-4135-8354-ab1901530b60
-[gcp2]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c4813050-49b8-4ff3-a649-ab190159a79c
-[gcp3]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=88c130ee-7317-490f-b6af-ab19015daa71
-[gcp4]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=4fb06e69-fb02-429b-bb08-ab1901610c71
-[gcp5]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=ddc5da52-8300-4f12-996e-ab1901641800
-[gcp6]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=681ca99d-55bf-4c7c-a1e4-ab190167c797
-[gcp7]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=31ad3ca7-2db7-4d1d-a5a8-ab19016db1c6
-[gcp8]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7d2c7fa4-8d74-45d2-a5ce-aa920149c1cb
-[gcp9]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=1aea13b5-e635-42df-9227-aa92015cdc9b
+[gcp1]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=55cf0d09-3647-4135-8354-ab1901530b60
+[gcp2]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c4813050-49b8-4ff3-a649-ab190159a79c
+[gcp3]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=88c130ee-7317-490f-b6af-ab19015daa71
+[gcp4]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=4fb06e69-fb02-429b-bb08-ab1901610c71
+[gcp5]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=ddc5da52-8300-4f12-996e-ab1901641800
+[gcp6]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=681ca99d-55bf-4c7c-a1e4-ab190167c797
+[gcp7]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=31ad3ca7-2db7-4d1d-a5a8-ab19016db1c6
+[gcp8]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7d2c7fa4-8d74-45d2-a5ce-aa920149c1cb
+[gcp9]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=1aea13b5-e635-42df-9227-aa92015cdc9b
