Consistent format for files in module01 and module02

--- a/modules/5507-01-hw.md
+++ b/modules/5507-01-hw.md
@@ -32,11 +32,9 @@ Submit your discussion on the [Canvas website][can2]
 
 Not available yet.
 
-#### Note
+This information is available both in Canvas and on [my github site][thisf].
 
-This page is available both on Canvas and [my github site][git0]. If you find a discrepancy let me know. The Canvas site should always take precedence.
-
-Here are links to [other important files][mygit] on my github site.
+If there is a discrepancy, the Canvas site takes precedence. The [readme.md file][mygit] on my github site has links to other important files for this class.
 
 [mygit]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
 
