--- a/modules/5507-01-videos.md
+++ b/modules/5507-01-videos.md
@@ -7,84 +7,59 @@ knit: (function(inputFile, encoding) {
   output_dir = "../results", output_format = "all") }) 
 ---
 
-### Videos and handouts, Module01
+### Videos and handouts, Module01, Total video time, 95 minutes
 
-#### M01-V01. Introducing your instructor
+There are two types of videos in this class. The most common is a PowerPoint video. In these videos, I display PowerPoint slides and talk. My comments are captured, more or less, in the speaker's notes. Every PowerPoint video should have an associated pdf file with the slides and speaker notes. For a few of these videos, I have abandoned PowerPoint for a live demonstration on my computer. This will show me typing into SAS or possibly other application software. There are no pdf files for the live demonstrations.
 
-+ PowerPoint presentation available in [Panopto format][m01v01] ( 3 minutes)
+M01-V01. Introducing your instructor. 
++ PowerPoint presentation available in [Panopto format][m01v01] (3 minutes)
 
-#### M01-V02. Where you can get SAS
+M01-V02. Where you can get SAS
++ PowerPoint presentation available in [Panopto format][m01v02] (4 minutes)
 
-+ PowerPoint presentation available in [Panopto format][m01v02] ( 4 minutes)
-
-#### M01-V03. Your first SAS program
-
-+ PowerPoint presentation available in [Panopto format][m01V03] ( 5 minutes)
+M01-V03. Your first SAS program
++ PowerPoint presentation available in [Panopto format][m01V03] (5 minutes)
 + SAS live demonstration available in [Panopto format][m01v03a] (11 minutes)
 
-#### M01-V04. History of SAS
-+ PowerPoint presentation available in [Panopto format][m01v04] ( 7 minutes)
+M01-V04. History of SAS
++ PowerPoint presentation available in [Panopto format][m01v04] (7 minutes)
 
-#### M01-V05. Documentation header
+M01-V05. Documentation header
++ PowerPoint presentation available in [Panopto format][m01v05] (6 minutes)
++ SAS live demonstration available in [Panopto format][m01v05a] (8 minutes)
 
-+ PowerPoint presentation available in [Panopto format][m01v05] ( 6 minutes)
-+ SAS live demonstration available in [Panopto format][m01v05a] ( 8 minutes)
-
-#### M01-V06. Storing SAS datasets using libname
-
-+ PowerPoint presentation available in [Panopto format][m01v06] ( 3 minutes)
+M01-V06. Storing SAS datasets using libname
++ PowerPoint presentation available in [Panopto format][m01v06] (3 minutes)
 + SAS live demonstration available in [Panopto format][m01v06a] (11 minutes)
 
-#### M01-V07. Storing SAS output using ODS
-
+M01-V07. Storing SAS output using ODS
 + PowerPoint presentation available in [Panopto format][m01v07] (11 minutes)
 + SAS live demonstration available in [Panopto format][m01v07a] (12 minutes)
 
-#### M01-V08. Reading external data using infile and filename
-
-+ PowerPoint presentation available in [Panopto format][m01v08] ( 3 minutes)
+M01-V08. Reading external data using infile and filename
++ PowerPoint presentation available in [Panopto format][m01v08] (3 minutes)
 + SAS live demonstration available in [Panopto format][m01v08a] (11 minutes)
 
-#### Total video time: 95 minutes
+This information is available both in Canvas and on [my github site][thisf].
 
-#### Recommended readings
+If there is a discrepancy, the Canvas site takes precedence. The [readme.md file][mygit] on my github site has links to other important files for this class.
 
-+ Hemedinger, Chris. How to run SAS programs in Jupyter Notebook, The SAS Dummy blog, 2016-04-24. Available in [html format][hem1].
-+ Hemken, Doug. SAS Using R Markdown (Windows). Available in [html format][hem2].
-+ SAS Institute. Explore the SAS workspace (1 of 8). Available in [html format][sas1].
-+ SAS Institute. SAS University Edition. Available in [html format][sas2].
-+ Simon, Stephen. Help! My Q: drive disappeared! Available in [pdf format][sim1]
-+ UMKC. Site-Licensed Software, SAS for Windows. Available in [html format][umk1].
+<!---my git--->
+[thisf]: https://github.com/pmean/introduction-to-sas/blob/master/modules/5507-01-videos.md
+[mygit]: https://github.com/pmean/introduction-to-sas/blob/master/README.md
 
-#### Note
+[m01v01]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=700eeac6-121e-46d6-a080-ad4500e4c370
+[m01v02]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=a1030297-ab65-4916-a913-ad4500e5d72a
+[m01v03]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c9b57b4f-3c10-4452-846e-ad4500e79d1c
+[m01v04]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=581a095f-76d2-4cc4-9915-ad4500e9258b
+[m01v05]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7f15273f-eac7-44b0-8185-ad4500ec1910
+[m01v06]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8939958a-d768-45dc-b544-ad4500f6261a
+[m01v07]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=585aaf55-3c25-4e7d-969b-ad4500f74c55
+[m01v08]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e2e5c875-eb04-48c5-8764-ad4500f838ae
 
-This page is available both on Canvas and [my github site][git0]. If you find a discrepancy let me know. The Canvas site should always take precedence.
-
-Here are links to [other important files][mygit] on my github site.
-
-[mygit]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
-
-[git0]: https://github.com/pmean/introduction-to-SAS/blob/master/modules/5507-01-videos.md
-
-[hem1]: https://blogs.sas.com/content/sasdummy/2016/04/24/how-to-run-sas-programs-in-jupyter-notebook/
-[hem2]: https://www.ssc.wisc.edu/~hemken/SASworkshops/Markdown/SASmarkdown.html
-[sas1]: http://support.sas.com/training/sas94/m3_1.htm
-[sas2]: https://www.sas.com/en_us/software/university-edition.html
-[sim1]: https://github.com/pmean/introduction-to-sql/blob/master/results/m01-lost-drive.pdf
-[umk1]: https://www.umkc.edu/is/support/services/software/siteLicensed/SAS/Index.asp
-
-[m01v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=700eeac6-121e-46d6-a080-ad4500e4c370
-[m01v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=a1030297-ab65-4916-a913-ad4500e5d72a
-[m01v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c9b57b4f-3c10-4452-846e-ad4500e79d1c
-[m01v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=581a095f-76d2-4cc4-9915-ad4500e9258b
-[m01v05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7f15273f-eac7-44b0-8185-ad4500ec1910
-[m01v06]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8939958a-d768-45dc-b544-ad4500f6261a
-[m01v07]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=585aaf55-3c25-4e7d-969b-ad4500f74c55
-[m01v08]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e2e5c875-eb04-48c5-8764-ad4500f838ae
-
-[m01v03a]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=1151e938-5f2c-4e76-bc0f-ad4500fb91a5
-[m01v05a]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0b8e1d29-5f3f-4b3e-94ca-ad4501006f02
-[m01v06a]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=963be955-cb09-48d5-973b-ad45010475c7
-[m01v07a]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=dea22af5-cc6f-4ec6-9034-ad4501080b71
-[m01v08a]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8675ded2-f735-407b-87ef-ad4501107d0e
+[m01v03a]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=1151e938-5f2c-4e76-bc0f-ad4500fb91a5
+[m01v05a]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0b8e1d29-5f3f-4b3e-94ca-ad4501006f02
+[m01v06a]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=963be955-cb09-48d5-973b-ad45010475c7
+[m01v07a]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=dea22af5-cc6f-4ec6-9034-ad4501080b71
+[m01v08a]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8675ded2-f735-407b-87ef-ad4501107d0e
 
