--- a/modules/5507-02-videos.md
+++ b/modules/5507-02-videos.md
@@ -7,56 +7,53 @@ knit: (function(inputFile, encoding) {
   output_dir = "../results", output_format = "all") }) 
 ---
 
-### Videos and handouts, Module02
+#### Videos and handouts, Module02
 
-#### M02-V01. Rules for variable names
-
-+ Video available in [Panopto format][m02v01]
+M02-V01. Rules for variable names
++ PowerPoint presentation available in [Panopto format][m02v01]
 + Slides available in [pdf format][git1]
 + m02-5507-simon-continuous-variables.sas available in [text format][git2]
 
-#### M02-V02. Variable labels
-
-+ Video available in [Panopto format][m02v02]
+M02-V02. Variable labels
++ PowerPoint presentation available in [Panopto format][m02v02]
 + See above for slides and speaker notes
 
-#### M02-V03. Printing row with largest/smallest variables
-
-+ Video available in [Panopto format][m02V03]
+M02-V03. Printing row with largest/smallest variables
++ PowerPoint presentation available in [Panopto format][m02V03]
 + See above for slides and speaker notes
 
-#### M02-V04. Missing values
-
-+ Video available in [Panopto format][m02v04]
+M02-V04. Missing values
++ PowerPoint presentation available in [Panopto format][m02v04]
 + See above for slides and speaker notes
 
-#### M02-V05. Simple transformations, histograms
-
-+ Video available in [Panopto format][m02v05]
+M02-V05. Simple transformations, histograms
++ PowerPoint presentation available in [Panopto format][m02v05]
 + See above for slides and speaker notes
 
-#### M02-V06. Correlations and scatterplots
-
-+ Video available in [Panopto format][m02v06]
+M02-V06. Correlations and scatterplots
++ PowerPoint presentation available in [Panopto format][m02v06]
 + See above for slides and speaker notes
 
-#### M02-V07. Your homework
+M02-V07. Your homework
++ Live demonstration available in [Panopto format][m02v07]
 
-+ Video available in [Panopto format][m02v07]
-+ Live demo. No slides or speaker notes
 
-Here are links to [other important files][readme] on my github site.
+This information is available both in Canvas and on [my github site][thisf].
 
-[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
+If there is a discrepancy, the Canvas site takes precedence. The [readme.md file][mygit] on my github site has links to other important files for this class.
+
+<!---my git--->
+[thisf]: https://github.com/pmean/introduction-to-sas/blob/master/modules/5507-02-videos.md
+[mygit]: https://github.com/pmean/introduction-to-sas/blob/master/README.md
 
 [git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m02-5507-simon-slides-and-speaker-notes.pdf
 [git2]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m02-5507-simon-continuous-variables.sas
 
-[m02v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=aa601083-671c-4a47-a8ea-ad490166aed9
-[m02v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6f1f3ef8-4476-45d5-bb99-ad49016bcf02
-[m02v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=395b874b-6abb-4b5b-b80a-ad49016d7259
-[m02v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=cc9d47d4-00ae-4d1b-b06a-ad4901703569
-[m02V05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=b78c9618-6533-434d-94d8-ad490172072d
-[m02V06]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=efc9093d-c0a0-4f19-b149-ad490173671a
-[m02V07]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e4dd8331-2a1a-4bc1-ab2d-ad4901788e27
+[m02v01]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=aa601083-671c-4a47-a8ea-ad490166aed9
+[m02v02]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6f1f3ef8-4476-45d5-bb99-ad49016bcf02
+[m02v03]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=395b874b-6abb-4b5b-b80a-ad49016d7259
+[m02v04]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=cc9d47d4-00ae-4d1b-b06a-ad4901703569
+[m02V05]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=b78c9618-6533-434d-94d8-ad490172072d
+[m02V06]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=efc9093d-c0a0-4f19-b149-ad490173671a
+[m02V07]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e4dd8331-2a1a-4bc1-ab2d-ad4901788e27
 
