--- a/modules/5507-02-hw.md
+++ b/modules/5507-02-hw.md
@@ -66,6 +66,15 @@ Graded: 3 points, one point deducted if submitted late.
 
 Not yet available.
 
+This information is available both in Canvas and on [my github site][thisf].
+
+If there is a discrepancy, the Canvas site takes precedence. The [readme.md file][mygit] on my github site has links to other important files for this class.
+
+<!---my git--->
+[thisf]: https://github.com/pmean/introduction-to-sas/blob/master/modules/5507-02-hw.md
+[mygit]: https://github.com/pmean/introduction-to-sas/blob/master/README.md
+
+
 
 [git1]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m02-5507-simon-cigarettes.sas
 [git2]: https://github.com/pmean/classes/blob/master/software-engineering/src/grading-rubric.md
