Added times to 5507-02-videos.md

--- a/modules/5507-02-videos.md
+++ b/modules/5507-02-videos.md
@@ -7,35 +7,35 @@ knit: (function(inputFile, encoding) {
   output_dir = "../results", output_format = "all") }) 
 ---
 
-#### Videos and handouts, Module02
+#### Videos, Total time: 58 minutes
 
 M02-V01. Rules for variable names
-+ PowerPoint presentation available in [Panopto format][m02v01]
++ PowerPoint presentation available in [Panopto format][m02v01] (14 minutes)
 + Slides available in [pdf format][git1]
 + m02-5507-simon-continuous-variables.sas available in [text format][git2]
 
 M02-V02. Variable labels
-+ PowerPoint presentation available in [Panopto format][m02v02]
++ PowerPoint presentation available in [Panopto format][m02v02] (5 minutes)
 + See above for slides and speaker notes
 
 M02-V03. Printing row with largest/smallest variables
-+ PowerPoint presentation available in [Panopto format][m02V03]
++ PowerPoint presentation available in [Panopto format][m02V03] (8 minutes)
 + See above for slides and speaker notes
 
 M02-V04. Missing values
-+ PowerPoint presentation available in [Panopto format][m02v04]
++ PowerPoint presentation available in [Panopto format][m02v04] (6 minutes)
 + See above for slides and speaker notes
 
 M02-V05. Simple transformations, histograms
-+ PowerPoint presentation available in [Panopto format][m02v05]
++ PowerPoint presentation available in [Panopto format][m02v05] (4 minutes)
 + See above for slides and speaker notes
 
 M02-V06. Correlations and scatterplots
-+ PowerPoint presentation available in [Panopto format][m02v06]
++ PowerPoint presentation available in [Panopto format][m02v06] (15 minutes)
 + See above for slides and speaker notes
 
 M02-V07. Your homework
-+ Live demonstration available in [Panopto format][m02v07]
++ Live demonstration available in [Panopto format][m02v07] (6 minutes)
 
 
 This information is available both in Canvas and on [my github site][thisf].
