--- a/modules/5507-03-hw.md
+++ b/modules/5507-03-hw.md
@@ -44,6 +44,15 @@ Graded: 3 points, one point deducted if submitted late.
 
 Not yet available.
 
+<!---my git--->
+This information is available both in Canvas and on [my github site][thisf].
+
+If there is a discrepancy, the Canvas site takes precedence. The [readme.md file][mygit] on my github site has links to other important files for this class.
+
+[thisf]: https://github.com/pmean/introduction-to-sas/blob/master/modules/5507-03-hw.md
+[mygit]: https://github.com/pmean/introduction-to-sas/blob/master/README.md
+<!---my git--->
+
 [git1a]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/energy01.csv
 [git2a]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/energy02.tsv
 [git3a]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/energy03.txt
