--- a/modules/5507-03-videos.md
+++ b/modules/5507-03-videos.md
@@ -56,9 +56,14 @@ Note: This recording was from an earlier class, and refers to a homework assignm
 + Video available in [Panopto format][m03V99]
 + Live demo, slides are not available
 
-Here are links to [other important files][readme] on my github site.
+<!---my git--->
+This information is available both in Canvas and on [my github site][thisf].
 
-[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
+If there is a discrepancy, the Canvas site takes precedence. The [readme.md file][mygit] on my github site has links to other important files for this class.
+
+[thisf]: https://github.com/pmean/introduction-to-sas/blob/master/modules/5507-03-videos.md
+[mygit]: https://github.com/pmean/introduction-to-sas/blob/master/README.md
+<!---my git--->
 
 [git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m03-5507-simon-slides-and-speaker-notes.pdf
 
