--- a/modules/5507-04-hw.md
+++ b/modules/5507-04-hw.md
@@ -42,10 +42,14 @@ I'd like some brief feedback to the videos you just watched. Keep it short. One 
 
 Graded: 3 points, one point deducted if submitted late.
 
-Here are links to [other important files][readme] on my github site.
+<!---my git--->
+This information is available both in Canvas and on [my github site][thisf].
 
-[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
+If there is a discrepancy, the Canvas site takes precedence. The [readme.md file][mygit] on my github site has links to other important files for this class.
+
+[thisf]: https://github.com/pmean/introduction-to-sas/blob/master/modules/5507-04-hw.md
+[mygit]: https://github.com/pmean/introduction-to-sas/blob/master/README.md
+<!---my git--->
 
 [git1]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/gardasil.csv
-
 [jse1]: http://jse.amstat.org/v19n1/gardasil.txt
