--- a/modules/5507-04-videos.md
+++ b/modules/5507-04-videos.md
@@ -40,9 +40,14 @@ knit: (function(inputFile, encoding) {
 + Video available in [Panopto format][m04v07]
 + See above for slides and speaker notes
 
-Here are links to [other important files][readme] on my github site.
+<!---my git--->
+This information is available both in Canvas and on [my github site][thisf].
 
-[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
+If there is a discrepancy, the Canvas site takes precedence. The [readme.md file][mygit] on my github site has links to other important files for this class.
+
+[thisf]: https://github.com/pmean/introduction-to-sas/blob/master/modules/5507-04-videos.md
+[mygit]: https://github.com/pmean/introduction-to-sas/blob/master/README.md
+<!---my git--->
 
 [git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m04-5507-simon-slides-and-speaker-notes.pdf
 [git2]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m04-5507-simon-categorical-variables.sas
