--- a/modules/5507-06-videos.md
+++ b/modules/5507-06-videos.md
@@ -54,9 +54,14 @@ knit: (function(inputFile, encoding) {
 + Video available in [Panopto format][gcp9]
 + Slides not yet available.
 
-Here are links to [other important files][readme] on my github site.
+<!---my git--->
+This information is available both in Canvas and on [my github site][thisf].
 
-[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
+If there is a discrepancy, the Canvas site takes precedence. The [readme.md file][mygit] on my github site has links to other important files for this class.
+
+[thisf]: https://github.com/pmean/introduction-to-sas/blob/master/modules/5507-06-videos.md
+[mygit]: https://github.com/pmean/introduction-to-sas/blob/master/README.md
+<!---my git--->
 
 [gcp1]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=55cf0d09-3647-4135-8354-ab1901530b60
 [gcp2]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c4813050-49b8-4ff3-a649-ab190159a79c
