--- a/modules/5507-03-videos.md
+++ b/modules/5507-03-videos.md
@@ -7,53 +7,52 @@ knit: (function(inputFile, encoding) {
   output_dir = "../results", output_format = "all") }) 
 ---
 
-### Videos and handouts, Module03
+#### Videos and handouts, Module03
 
-#### M03-V01. Space delimited files
-
-+ Video available in [Panopto format][m03v01]
-+ Slides and speaker notes available in [pdf format][git1]
+M03-V01. Space delimited files
++ PowerPoint presentation available in [Panopto format][m03v01] (5 minutes)
++ Slides available in [pdf format][git1] and [pptx format][git2]
 
 #### M03-V02. Comma delimited files
 
-+ Video available in [Panopto format][m03v02]
++ PowerPoint presentation available in [Panopto format][m03v02] (2 minutes)
 + Slides and speaker notes, see above
 
 #### M03-V03. Tab delimited files
 
-+ Video available in [Panopto format][m03v03]
++ PowerPoint presentation available in [Panopto format][m03v03] (4 minutes)
 + Slides and speaker notes, see above
 
 #### M03-V04. Tilde delimited files
 
-+ Video available in [Panopto format][m03v04]
++ PowerPoint presentation available in [Panopto format][m03v04] (2 minutes)
 + Slides and speaker notes, see above
 
 #### M03-V05. Fixed width files
 
-+ Video available in [Panopto format][m03v05]
++ PowerPoint presentation available in [Panopto format][m03v05] (5 minutes)
 + Slides and speaker notes, see above
 
 #### M03-V06. String data
 
-+ Video available in [Panopto format][m03v06]
++ PowerPoint presentation available in [Panopto format][m03v06] (7 minutes)
 + Slides and speaker notes, see above
 
 #### M03-V07. First line names
 
-+ Video available in [Panopto format][m03v07]
++ PowerPoint presentation available in [Panopto format][m03v07] (4 minutes)
 + Slides and speaker notes, see above
 
-#### M03-V08. Your homework
+#### M03-V08. Your homework (6 minutes)
 
-+ Video available in [Panopto format][m03v08]
++ Live demo available in [Panopto format][m03v08] (6 minutes)
 + Live demo, no slides or speaker notes
 
 #### M03-V99. Evil tab character
 
 Note: This recording was from an earlier class, and refers to a homework assignment that I ditched because it was too complicated. The video explains that a large part of the reason the assignment was confusing was because of the evil tab character. It explains very clearly why the tab character is evil. It is well worth watching, even though it references an obsolete homework assignment.
 
-+ Video available in [Panopto format][m03V99]
++ Live demo available in [Panopto format][m03V99] (12 minutes)
 + Live demo, slides are not available
 
 <!---my git--->
@@ -65,7 +64,8 @@ If there is a discrepancy, the Canvas site takes precedence. The [readme.md file
 [mygit]: https://github.com/pmean/introduction-to-sas/blob/master/README.md
 <!---my git--->
 
-[git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m03-5507-simon-slides-and-speaker-notes.pdf
+[git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/5507-03-simon-slides-and-speaker-notes.pdf
+[git2]: https://github.com/pmean/introduction-to-SAS/blob/master/results/5507-03-simon-slides-and-speaker-notes.pptx
 
 [m03v01]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=f257dafa-1f47-40a4-a16a-ad5601435c74
 [m03v02]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6099f2b8-848f-4140-b185-ad560145001b
