Updated module03 videos

--- a/modules/5507-03-videos.md
+++ b/modules/5507-03-videos.md
@@ -13,42 +13,42 @@ M03-V01. Space delimited files
 + PowerPoint presentation available in [Panopto format][m03v01] (5 minutes)
 + Slides available in [pdf format][git1] and [pptx format][git2]
 
-#### M03-V02. Comma delimited files
+M03-V02. Comma delimited files
 
 + PowerPoint presentation available in [Panopto format][m03v02] (2 minutes)
 + Slides and speaker notes, see above
 
-#### M03-V03. Tab delimited files
+M03-V03. Tab delimited files
 
 + PowerPoint presentation available in [Panopto format][m03v03] (4 minutes)
 + Slides and speaker notes, see above
 
-#### M03-V04. Tilde delimited files
+M03-V04. Tilde delimited files
 
 + PowerPoint presentation available in [Panopto format][m03v04] (2 minutes)
 + Slides and speaker notes, see above
 
-#### M03-V05. Fixed width files
+M03-V05. Fixed width files
 
 + PowerPoint presentation available in [Panopto format][m03v05] (5 minutes)
 + Slides and speaker notes, see above
 
-#### M03-V06. String data
+M03-V06. String data
 
 + PowerPoint presentation available in [Panopto format][m03v06] (7 minutes)
 + Slides and speaker notes, see above
 
-#### M03-V07. First line names
+M03-V07. First line names
 
 + PowerPoint presentation available in [Panopto format][m03v07] (4 minutes)
 + Slides and speaker notes, see above
 
-#### M03-V08. Your homework (6 minutes)
+M03-V08. Your homework (6 minutes)
 
 + Live demo available in [Panopto format][m03v08] (6 minutes)
 + Live demo, no slides or speaker notes
 
-#### M03-V99. Evil tab character
+M03-V99. Evil tab character
 
 Note: This recording was from an earlier class, and refers to a homework assignment that I ditched because it was too complicated. The video explains that a large part of the reason the assignment was confusing was because of the evil tab character. It explains very clearly why the tab character is evil. It is well worth watching, even though it references an obsolete homework assignment.
 
