--- a/modules/5507-03-videos.md
+++ b/modules/5507-03-videos.md
@@ -43,7 +43,7 @@ M03-V07. First line names
 + PowerPoint presentation available in [Panopto format][m03v07] (4 minutes)
 + Slides and speaker notes, see above
 
-M03-V08. Your homework (6 minutes)
+M03-V08. Your homework
 
 + Live demo available in [Panopto format][m03v08] (6 minutes)
 + Live demo, no slides or speaker notes
