Updated module04 videos

--- a/modules/5507-04-videos.md
+++ b/modules/5507-04-videos.md
@@ -7,37 +7,37 @@ knit: (function(inputFile, encoding) {
   output_dir = "../results", output_format = "all") }) 
 ---
 
-### Videos and handouts, Module04
+### Videos and handouts, Module04 (Total time: 49 minutes)
 
 #### M04-V01. Frequency counts
 
-+ Video available in [Panopto format][m04v01]
++ PowerPoint presentation available in [Panopto format][m04v01] (5 minutes)
 + Slides and speaker notes available in [pdf format][git1]
 + SAS program used in these videos in [text format][git2]
 
 #### M04-V02. Convert string to numeric
 
-+ Video available in [Panopto format][m04v02]
++ PowerPoint presentation available in [Panopto format][m04v02] (5 minutes)
 + See above for slides and speaker notes
 
 #### M04-V03. Labels for number codes
-+ Video available in [Panopto format][m04v03]
++ PowerPoint presentation available in [Panopto format][m04v03] (4 minutes)
 + See above for slides and speaker notes
 
 #### M04-V04. Drawing bar charts
-+ Video available in [Panopto format][m04v04]
++ PowerPoint presentation available in [Panopto format][m04v04] (7 minutes)
 + See above for slides and speaker notes
 
 #### M04-V05. Converting continuous to categorical
-+ Video available in [Panopto format][m04v05]
++ PowerPoint presentation available in [Panopto format][m04v05] (11 minutes)
 + See above for slides and speaker notes
 
 #### M04-V06. Modifying categorical variables
-+ Video available in [Panopto format][m04v06]
++ PowerPoint presentation available in [Panopto format][m04v06] (4 minutes)
 + See above for slides and speaker notes
 
 #### M04-V07. Crosstabulations
-+ Video available in [Panopto format][m04v07]
++ PowerPoint presentation available in [Panopto format][m04v07] (13 minutes)
 + See above for slides and speaker notes
 
 <!---my git--->
